--- a/Gomoku_1312659_Ver4/Gomoku_1312659_Ver4/packages.config
+++ b/Gomoku_1312659_Ver4/Gomoku_1312659_Ver4/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EngineIoClientDotNet" version="0.9.21" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="Prism.Mvvm" version="1.1.1" targetFramework="net452" />
   <package id="SocketIoClientDotNet" version="0.9.12" targetFramework="net452" />
   <package id="WebSocket4Net" version="0.13.1" targetFramework="net452" />
 </packages>
